# CodeCanvas

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ci-compose.yml  docker-compose.yml  postgres-init.sql  sample-compose.yml  update.sh
authy/: Cargo.toml  Dockerfile  config.toml
authy/src/: auth.rs  config.rs  error.rs  http.rs  main.rs  proxy.rs
authy/src/endpoint/: mod.rs  report_bug.rs
authy/src/models/: user.rs
tasky/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  diesel.toml  migrate.sh  set_db_uri.sh  tasky.proto
tasky/migrations/2024-09-16-180631_create_group/: up.sql
tasky/migrations/2024-09-21-140549_group_join_request/: down.sql  up.sql
tasky/migrations/2024-09-22-095329_initial_assignment/: down.sql  up.sql
tasky/migrations/2024-09-28-143900_add_question_based/: up.sql
tasky/migrations/2024-09-29-132954_add_assignment_tests/: down.sql  up.sql
tasky/migrations/2024-09-29-151033_custom_runner_specs/: down.sql  up.sql
tasky/migrations/2024-10-04-122857_add_solutions/: down.sql  up.sql
tasky/migrations/2024-10-04-123800_add_solution_file_structure/: down.sql  up.sql
tasky/migrations/2024-10-05-135227_extend_solution_approval_status/: down.sql  up.sql
tasky/migrations/2024-10-06-151200_solution_add_executor_reference/: down.sql  up.sql
tasky/migrations/2024-10-07-150427_add_group_assiciation/: down.sql  up.sql
tasky/migrations/2024-10-08-083007_runner_cmd/: down.sql  up.sql
tasky/migrations/2024-10-09-121100_question_based_assignments/: down.sql  up.sql
tasky/migrations/2024-10-09-172427_question_based_solution/: down.sql  up.sql
tasky/migrations/2024-10-21-114512_optional_due_date/: down.sql  up.sql
tasky/migrations/2024-10-28-102732_assignment_wish/: down.sql  up.sql
tasky/migrations/2024-10-29-191834_code_comments/: down.sql  up.sql
tasky/migrations/2024-11-12-141725_notifications/: up.sql
tasky/migrations/2024-11-13-154306_join_request_policy/: down.sql  up.sql
tasky/migrations/2024-11-14-190328_timestamps/: down.sql  up.sql
tasky/migrations/2024-11-15-104318_cascading/: up.sql
tasky/migrations/2024-11-18-175123_verified_groups/: down.sql  up.sql
tasky/migrations/2024-11-19-090556_scaling_groups/: down.sql  up.sql
tasky/migrations/2024-11-19-091626_groups_fix/: up.sql
tasky/migrations/2024-11-19-174343_scaling_assignments/: up.sql
tasky/migrations/2024-11-19-211502_scalable_notifications/: up.sql
tasky/migrations/2024-11-20-142007_notifications_system_wide/: up.sql
tasky/src/: auth_middleware.rs  deletion_scheduler.rs  error.rs  lib.rs  main.rs  schema.rs  test_impls.rs
tasky/src/grpc/: mod.rs
tasky/src/handler/: assignment.rs  file_structure.rs  mod.rs  questions.rs  solution.rs
tasky/src/http/: mod.rs
tasky/src/models/: assignment.rs  assignment_completion.rs  assignment_wish.rs  code_comment.rs  database.rs  group.rs  group_join_request.rs  group_member.rs  mod.rs  notification.rs  notification_target.rs  solution.rs
tasky/src/mongo/: mod.rs  task_file.rs  test_file.rs
tasky/src/response/: assignment.rs  assignment_completion.rs  group.rs  group_join_request.rs  group_member.rs  grpc.rs  mod.rs  shared.rs  solution.rs
tasky/src/routes/: assignment.rs  assignment_completion.rs  assignment_wish.rs  code_comment.rs  group.rs  mod.rs  (+4 more)
tasky/tests/: demo.rs  mod.rs
(+232 files in other folders)
