[package]
name = "authy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
pretty_env_logger = "0.5.0"
log = { version = "0.4.22", features = ["serde", "std"] }
build-info = { version = "0.0.38" }
figment = { version = "0.10.18", features = ["toml", "env"] }
toml = "0.8.19"
thiserror = "1.0.61"
awc = "3"
lru = "0.12.4"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
actix-cors = "0.7.0"
octorust = "0.7.0"

[build-dependencies]
build-info-build = "0.0.38"
