[package]
name = "tasky"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.22", features = ["serde", "std"] }
figment = { version = "0.10.18", features = ["toml", "env"] }
toml = "0.8.19"
pretty_env_logger = "0.5.0"
actix-web = "4"
tonic = "0.12.2"
prost = "0.13.2"
pq-sys = { version = "0.6", features = ["bundled"] }
futures = "0.3.30"
thiserror = "1.0.61"
actix-multipart = "0.7.2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] }
awc = "3.5.1"

[build-dependencies]
tonic-build = "0.12.2"
